--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# Eclipse template
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.classpath
+
+# Package Files
+*.jar
+*.war
+*.ear
+.vertx
+
+# Maven template
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -7,5 +28,6 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+
+# Java template
+*.class
