--- a/registar_user/src/main/config/config.json
+++ b/registar_user/src/main/config/config.json
@@ -2,6 +2,6 @@
   "local":true,
   "host": "localhost",
   "port": 8080,
-  "db_name": "utilizador_registo",
+  "db_name": "registration",
   "connection_string": "mongodb://localhost:27017"
 }
