--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
     <module>api_gateway</module>
     <module>registar_user</module>
     <module>login</module>
+	<module>get_products</module>
+	<module>get_tables</module>
+	<module>get_menus</module>
   </modules>
 
   <properties>
