--- a/kubernet-settings/Deployment/login-deployment.yaml
+++ b/kubernet-settings/Deployment/login-deployment.yaml
@@ -1,21 +1,24 @@
 apiVersion: apps/v1
-kind: ReplicationController
+kind: Deployment
 metadata:
   labels:
-    name: get-tables
+    app: login
     visualize: "true"
-  name: get-tables-controller
+  name: login-deployment
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: login
   template:
     metadata:
       labels:
-        name: get-tables
+        app: login
         visualize: "true"
     spec:
       containers:
-        - image: get-tables:{{CONTAINER_VERSION}}
-          name: get-tables
+        - image: login:{{CONTAINER_VERSION}}
+          name: login
           ports:
             - name: hazelcast
               containerPort: 5701
