--- a/kubernet-settings/Deployment/pay_build-deployment.yaml
+++ b/kubernet-settings/Deployment/pay_build-deployment.yaml
@@ -1,21 +1,24 @@
 apiVersion: apps/v1
-kind: ReplicationController
+kind: Deployment
 metadata:
   labels:
-    name: get-tables
+    app: pay-build
     visualize: "true"
-  name: get-tables-controller
+  name: pay-build-deployment
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: pay-build
   template:
     metadata:
       labels:
-        name: get-tables
+        app: pay-build
         visualize: "true"
     spec:
       containers:
-        - image: get-tables:{{CONTAINER_VERSION}}
-          name: get-tables
+        - image: pay-build:{{CONTAINER_VERSION}}
+          name: pay-build
           ports:
             - name: hazelcast
               containerPort: 5701
