--- a/kubernet-settings/ReplicationController/mongo-controller.yaml
+++ b/kubernet-settings/ReplicationController/mongo-controller.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicationController
 metadata:
   labels:
@@ -20,4 +20,3 @@ spec:
         - name: mongo
           containerPort: 27017
           hostPort: 27017
-          #hostIP: 172.16.4.244 # my-hazelcast-pods=172.16.0.0/12
