#Microservices works on minikube
The microservices now works on minikube, for this work now it's necessary change the  IP"connection_string": "mongodb://192.168.99.100:27017" for the command "minikube ip"

--- a/kubernet-settings/Deployment/api-gateway-deployment.yaml
+++ b/kubernet-settings/Deployment/api-gateway-deployment.yaml
@@ -25,4 +25,4 @@ spec:
               hostPort: 8080
             - name: hazlecast
               containerPort: 5701
-              hostPort: 5701
+              #hostPort: 5701
