--- a/kubernet-settings/Deployment/get-products-deployment.yaml
+++ b/kubernet-settings/Deployment/get-products-deployment.yaml
@@ -22,4 +22,4 @@ spec:
           ports:
             - name: hazlecast
               containerPort: 5701
-              hostPort: 5701
+              #hostPort: 5701
