--- a/kubernet-settings/Deployment/hazelcast-management-center-deployment.yaml
+++ b/kubernet-settings/Deployment/hazelcast-management-center-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         visualize: "true"
     spec:
       containers:
-        - image: hazelcast/management-center:3.9
+        - image: hazelcast/management-center:3.9 #:3.9 ou :3.6
           name: container-hazelcast-management-center
           ports:
             - name: mancenter
@@ -25,4 +25,4 @@ spec:
               hostPort: 8080
             - name: hazelcast
               containerPort: 5701
-              hostPort: 5701
+              #hostPort: 5701
