--- a/kubernet-settings/Deployment/mongo-deployment.yaml
+++ b/kubernet-settings/Deployment/mongo-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         visualize: "true"
     spec:
       containers:
-        - image: mongo
+        - image: mongo:3.6
           name: mongo
           ports:
             - name: mongo
