--- a/kubernet-settings/Service/registar_user-service.yaml
+++ b/kubernet-settings/Service/registar_user-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: registar-user
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: registar-user
 spec:
