--- a/kubernet-settings/Service/reporting-service.yaml
+++ b/kubernet-settings/Service/reporting-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: reporting
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: reporting
 spec:
