--- a/kubernet-settings/ReplicationController/api-gateway-controller.yaml
+++ b/kubernet-settings/ReplicationController/api-gateway-controller.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
@@ -22,4 +22,4 @@ spec:
               hostPort: 8080
             - name: hazlecast
               containerPort: 5701
-              hostPort: 5701
+              #hostPort: 5701
