--- a/kubernet-settings/ReplicationController/get-tables-controller.yaml
+++ b/kubernet-settings/ReplicationController/get-tables-controller.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
@@ -17,5 +17,5 @@ spec:
         - image: get-tables:{{CONTAINER_VERSION}}
           name: get-tables
           ports:
-            - name: hazelcast
+            - name: hazlecast
               containerPort: 5701
