--- a/kubernet-settings/ReplicationController/login-controller.yaml
+++ b/kubernet-settings/ReplicationController/login-controller.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
@@ -19,3 +19,4 @@ spec:
           ports:
             - name: hazelcast
               containerPort: 5701
+              #hostPort: 5701
