--- a/kubernet-settings/ReplicationController/mongo-controller.yaml
+++ b/kubernet-settings/ReplicationController/mongo-controller.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: ReplicationController
 metadata:
   labels:
@@ -14,9 +14,9 @@ spec:
         visualize: "true"
     spec:
       containers:
-      - image: mongo
+      - image: mongo:3.6
         name: mongo
         ports:
-        - name: mongo
-          containerPort: 27017
-          hostPort: 27017
+          - name: mongo
+            containerPort: 27017
+            hostPort: 27017
