--- a/kubernet-settings/Service/api-gateway-service.yaml
+++ b/kubernet-settings/Service/api-gateway-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: api-gateway
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: api-gateway
 spec:
