--- a/kubernet-settings/Service/get-menus-service.yaml
+++ b/kubernet-settings/Service/get-menus-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: get-menus
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: get-menus
 spec:
