--- a/kubernet-settings/Service/get-products-service.yaml
+++ b/kubernet-settings/Service/get-products-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: get-products
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: get-products
 spec:
