--- a/kubernet-settings/Service/get-tables-service.yaml
+++ b/kubernet-settings/Service/get-tables-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: get-tables
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: get-tables
 spec:
