--- a/kubernet-settings/Service/login-service.yaml
+++ b/kubernet-settings/Service/login-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: login
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: login
 spec:
