--- a/kubernet-settings/Service/update_table-service.yaml
+++ b/kubernet-settings/Service/update_table-service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     name: update-table
     visualize: "true"
+    cluster01: "true"
     service-name: cluster01
   name: update-table
 spec:
